# bishare-protocol

./: .gitignore  CLAUDE.md  improve.md
android/: .gitignore  build.gradle.kts  consumer-rules.pro
android/src/main/java/com/bishare/protocol/binary/: BinaryProtocol.kt
android/src/main/java/com/bishare/protocol/constants/: APIPaths.kt  CryptoConstants.kt  FileCategories.kt  Ports.kt  ProtocolConfig.kt  ServiceTypes.kt
android/src/main/java/com/bishare/protocol/encryption/: BIShareEncryption.kt
android/src/test/java/com/bishare/protocol/: ConstantsTest.kt  EncryptionTest.kt  ModelsTest.kt  UtilitiesTest.kt
ios/: Package.swift
ios/Sources/BIShareProtocol/Binary/: BinaryProtocol.swift
ios/Sources/BIShareProtocol/Constants/: APIPaths.swift  CryptoConstants.swift  FileCategories.swift  Ports.swift  ProtocolConfig.swift  ServiceTypes.swift
ios/Sources/BIShareProtocol/Encryption/: BIShareEncryption.swift
ios/Sources/BIShareProtocol/HTTP/: HTTPParser.swift  HTTPRequest.swift  HTTPResponse.swift
ios/Sources/BIShareProtocol/Models/: ClipboardPayload.swift  DeviceInfo.swift  FileMetadata.swift  FileRequestTypes.swift  RoomTypes.swift  SessionTypes.swift  TransferTypes.swift
ios/Sources/BIShareProtocol/Utilities/: CodeGenerator.swift  FileCategorizer.swift  FileNameSanitizer.swift  SmartNaming.swift
ios/Tests/BIShareProtocolTests/: ConstantsTests.swift  EncryptionTests.swift  HTTPParserTests.swift  ModelsTests.swift  UtilitiesTests.swift
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: binary.rs  constants.rs  crypto.rs  lib.rs  models.rs  utils.rs
(+12 files in other folders)
